--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_sign_in: ^6.2.1
+  google_maps_flutter: ^2.0.6 # Check for the latest version
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +26,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+
