--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   image_picker: ^0.8.4+4 # Check for the latest version
   firebase_storage: ^11.6.0
   cloud_firestore: ^4.14.0
+  intl: ^0.17.0 
 
 dev_dependencies:
   flutter_test:
