--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_sign_in: ^6.2.1
-  google_maps_flutter: ^2.0.6 # Check for the latest version
+  google_maps_flutter: ^2.5.3 
   geolocator: ^10.1.0
-  image_picker: ^0.8.4+4 # Check for the latest version
+  image_picker: ^1.0.7 
   firebase_storage: ^11.6.0
   cloud_firestore: ^4.14.0
   intl: ^0.18.1
