--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   cloud_firestore: ^4.14.0
   intl: ^0.18.1
   cached_network_image: ^3.3.1
+  cupertino_icons: ^1.0.6
+  flutter_platform_widgets: ^6.0.2
 
 dev_dependencies:
   flutter_test:
