--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  mockito: 5.4.4
+  fake_cloud_firestore: ^2.4.8
 
 flutter:
   uses-material-design: true
