--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.18.1
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.6
+  logger: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +31,9 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   mockito: 5.4.4
   fake_cloud_firestore: ^2.4.8
+  firebase_auth_mocks: ^0.13.0
+  firebase_storage_mocks: ^0.6.1
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
