--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.6
   logger: ^2.3.0
+  geoflutterfire2: ^2.3.15
 
 dev_dependencies:
   flutter_test:
